--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
           <li>CSS3</li>
           <li>JavaScript</li>
           <li>jQuery</li>
+          <li>React</li>
+          <li>Python</li>
+          <li>Django</li>
         </ul>
 
         <p>I'm looking for a company focused on quality and a position where I can explore new problems and come up with creative solutions.</p>
