Change style of contact page

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <ul class="nav">
           <li class="name">Yang Wang</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="projects.html" target="_blank">Projects</a></li>
+          <li><a href="https://ywang04.github.io/basic-website/" target="_blank">Projects</a></li>
           <li><a href="contact.html" class="selected">Contact</a></li>
         </ul>
         </nav>
@@ -22,27 +22,28 @@
     <header>
       <img src="images/koala.jpg" alt="Drawing of Koala" class="profile-image">
       <h1 class="tag name">Hello, I'm Yang.</h1>
-      <p class="tag occupation">Front End Developer</p>
+      <p class="tag occupation">Aspiring Front End Developer</p>
     </header>
 
     <main class="flex">
-      <div class="card">
-        <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
-      </div>
+      <div class="contact-card">
+          <h2>Contact Details</h2>
+          <p>
+            I'm currently preparing my portfolio and will be looking for employment in a couple of months. If you have any questions, please feel free to contact me.
+          </p>
+          <ul class="contact-info">
+            <li class="phone">
+              <a href="tel:0435 068 448">0435 068 448</a>
+            </li>
 
-      <div class="card">
-        <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
-        </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+            <li class="email">
+              <a href="mailto:yang.wang04@gmail.com">yang.wang04@gmail.com</a>
+            </li>
+
+            <li class="twitter">
+              <a href="http://twitter.com/intent/tweet?screen_name=ywang04">@ywang04</a>
+            </li>
+          </ul>
       </div>
     </main>
 
