--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul class="nav">
           <li class="name">Yang Wang</li>
           <li><a href="index.html" class="selected">Home</a></li>
-          <li><a href="projects.html" target="_blank">Projects</a></li>
+          <li><a href="https://ywang04.github.io/basic-website/" target="_blank">Projects</a></li>
           <li><a href="contact.html" target="_blank">Contact</a></li>
         </ul>
     </div>
@@ -42,6 +42,7 @@
         <ul class="skills">
           <li>HTML5</li>
           <li>CSS3</li>
+          <li>Responsive Web Design</li>
           <li>JavaScript</li>
           <li>jQuery</li>
           <li>React</li>
