Remove contact-card class and use card class instead

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     </header>
 
     <main class="flex">
-      <div class="contact-card">
+      <div class="card">
           <h2>Contact Details</h2>
           <p>
             I'm currently preparing my portfolio and will be looking for employment in a couple of months. If you have any questions, please feel free to contact me.
