--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Yang Wang</li>
+          <li class="name"><a href="index.html">Yang Wang</a></li>
           <li><a href="index.html" class="selected">Home</a></li>
           <li><a href="https://ywang04.github.io/basic-website/" target="_blank">Projects</a></li>
           <li><a href="contact.html" target="_blank">Contact</a></li>
