Modify portfolio with latest information

--- a/contact.html
+++ b/contact.html
@@ -1,60 +1,78 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Yang Wang | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
-  <body>
+  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
+</head>
 
-    <div class="main-nav">
-        <ul class="nav">
-          <li class="name"><a href="index.html">Yang Wang</a></li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="https://ywang04.github.io/basic-website/" target="_blank">Projects</a></li>
-          <li><a href="contact.html" class="selected">Contact</a></li>
-        </ul>
-        </nav>
-    </div>
+<body>
 
-    <header>
-      <img src="images/koala.jpg" alt="Drawing of Koala" class="profile-image">
-      <h1 class="tag name">Hello, I'm Yang.</h1>
-      <p class="tag occupation">Aspiring Front End Developer</p>
-    </header>
+  <div class="main-nav">
+    <ul class="nav">
+      <li class="name">
+        <a href="index.html">Yang Wang</a>
+      </li>
+      <li>
+        <a href="index.html">Home</a>
+      </li>
+      <li>
+        <a href="https://ywang04.github.io/basic-website/" target="_blank">Projects</a>
+      </li>
+      <li>
+        <a href="contact.html" class="selected">Contact</a>
+      </li>
+    </ul>
+    </nav>
+  </div>
 
-    <main class="flex">
-      <div class="card">
-          <h2>Contact Details</h2>
-          <p>
-            I'm currently preparing my portfolio and will be looking for employment in a couple of months. If you have any questions, please feel free to contact me.
-          </p>
-          <ul class="contact-info">
-            <li class="phone">
-              <a href="tel:0435 068 448">0435 068 448</a>
-            </li>
+  <header>
+    <img src="images/koala.jpg" alt="Drawing of Koala" class="profile-image">
+    <h1 class="tag name">Hello, I'm Yang.</h1>
+    <p class="tag occupation">Aspiring Front End Developer</p>
+  </header>
 
-            <li class="email">
-              <a href="mailto:yang.wang04@gmail.com">yang.wang04@gmail.com</a>
-            </li>
+  <main class="flex">
+    <div class="card">
+      <h2>Contact Details</h2>
+      <p>
+        I'm actively looking for employment. If you have any questions, please feel free to contact me.
+      </p>
+      <ul class="contact-info">
+        <li class="phone">
+          <a href="tel:0435 068 448">0435 068 448</a>
+        </li>
 
-            <li class="twitter">
-              <a href="http://twitter.com/intent/tweet?screen_name=ywang04">@ywang04</a>
-            </li>
-          </ul>
-      </div>
-    </main>
+        <li class="email">
+          <a href="mailto:yang.wang04@gmail.com">yang.wang04@gmail.com</a>
+        </li>
 
-    <footer>
-      <ul>
-        <li><a href="https://www.linkedin.com/in/ywang04/" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/ywang04" class="social github">Github</a></li>
-        <li><a href="https://twitter.com/ywang04" class="social twitter">Twitter</a></li>
+        <li class="twitter">
+          <a href="http://twitter.com/intent/tweet?screen_name=ywang04">@ywang04</a>
+        </li>
       </ul>
-      <p class="copyright">&copy; 2017 Yang Wang</p>
-    </footer>
+    </div>
+  </main>
 
-  </body>
-  </html>
+  <footer>
+    <ul>
+      <li>
+        <a href="https://www.linkedin.com/in/ywang04/" class="social linkedin">LinkedIn</a>
+      </li>
+      <li>
+        <a href="https://github.com/ywang04" class="social github">Github</a>
+      </li>
+      <li>
+        <a href="https://twitter.com/ywang04" class="social twitter">Twitter</a>
+      </li>
+    </ul>
+    <p class="copyright">&copy; 2018 Yang Wang</p>
+  </footer>
+
+</body>
+
+</html>
