Modify project page to latest version

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <a href="index.html">Home</a>
       </li>
       <li>
-        <a href="https://ywang04.github.io/basic-website/" target="_blank">Projects</a>
+        <a href="project.html">Projects</a>
       </li>
       <li>
         <a href="contact.html" class="selected">Contact</a>
@@ -40,7 +40,7 @@
     <div class="card">
       <h2>Contact Details</h2>
       <p>
-        I'm actively looking for employment. If you have any questions, please feel free to contact me.
+        I'm actively looking for employment. If you have any opportunities, please feel free to contact me.
       </p>
       <ul class="contact-info">
         <li class="phone">
