--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="index.html" class="selected">Home</a>
       </li>
       <li>
-        <a href="https://ywang04.github.io/basic-website/">Projects</a>
+        <a href="project.html">Projects</a>
       </li>
       <li>
         <a href="contact.html">Contact</a>
