Remove target="_blank" from project.html

--- a/project.html
+++ b/project.html
@@ -42,7 +42,7 @@
         <ul id="gallery">
           <li>
             <h3>Project 1 - YouMall Admin System</h3>
-            <a href="http://admin.youmall.co" target="_blank">
+            <a href="http://admin.youmall.co">
               <img src="images/youmall.jpg" alt="YouMall">
             </a>
             <p>
@@ -52,13 +52,13 @@
               <b>Tech: </b> HTML5, CSS3, JavaScript (ES6), React, React-Router, yarn, webpack, jQuery, Ajax, Git, NGINX.
               </br/>
               <b>Github: </b>
-              <a href="https://github.com/ywang04/youmall-admin-react" target="_blank">YouMall Admin System</a>
+              <a href="https://github.com/ywang04/youmall-admin-react">YouMall Admin System</a>
             </p>
           </li>
 
           <li>
             <h3>Project 2 - Yuora Website</h3>
-            <a href="http://yuora.tech" target="_blank">
+            <a href="http://yuora.tech">
               <img src="images/yuora.jpg" alt="Yuora">
             </a>
             <p>
@@ -68,13 +68,13 @@
               <b>Tech: </b>HTML5, CSS3, JavaScript, jQuery, Ajax, Python Flask, MySQL, Git, NGINX, Digital Ocean etc.
               <br/>
               <b>Github: </b>
-              <a href="https://github.com/ywang04/flask-blog" target="_blank">Yuora Website</a>
+              <a href="https://github.com/ywang04/flask-blog">Yuora Website</a>
             </p>
           </li>
 
           <li>
             <h3>Project 3 - Meetup RSVP Website</h3>
-            <a href="https://ywang04.github.io/RSVP/" target="_blank">
+            <a href="https://ywang04.github.io/RSVP/">
               <img src="images/RSVP.jpg" alt="RSVP">
             </a>
             <p>
@@ -84,7 +84,7 @@
               <b>Tech: </b>HTML5, CSS3, JavaScript (ES6), Local Storage, JSON and Git.
               </br/>
               <b>Github: </b>
-              <a href="https://github.com/ywang04/RSVP" target="_blank">Meetup RSVP Website</a>
+              <a href="https://github.com/ywang04/RSVP">Meetup RSVP Website</a>
             </p>
           </li>
         </ul>
