--- a/project.html
+++ b/project.html
@@ -49,7 +49,7 @@
               <b>Description: </b>A generic enterprise admin system that enables administers of the e-commerce platform to manage
               their online business.
               <br />
-              <b>Tech: </b> HTML5, CSS3, JavaScript (ES6), React, React-Router, yarn, webpack, jQuery, Ajax, Git, NGINX.
+              <b>Tech: </b> HTML5, CSS3, Sass, JavaScript (ES6), React, React-Router, yarn, webpack, jQuery, Ajax, Git, NGINX.
               </br/>
               <b>Github: </b>
               <a href="https://github.com/ywang04/youmall-admin-react">YouMall Admin System</a>
