Make some changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <li>CSS3</li>
         <li>Responsive Web Design</li>
         <li>JavaScript(ES6)</li>
-        <li>React</li>
+        <li>React.js</li>
+        <li>Redux</li>
         <li>Webpack</li>
       </ul>
 
