--- a/project.html
+++ b/project.html
@@ -46,10 +46,11 @@
               <img src="images/youmall.jpg" alt="YouMall">
             </a>
             <p>
-              <b>Description: </b>A generic enterprise admin system that enables administers of the e-commerce platform to manage
-              their online business.
+              <b>Description: </b>A robust, single page application for generic enterprise admin system that enables administers
+              to manage their online business.
               <br />
-              <b>Tech: </b> HTML5, CSS3, Sass, JavaScript (ES6), React, React-Router, yarn, webpack, jQuery, Ajax, Git, NGINX.
+              <b>Tech: </b> HTML5, CSS3, Bootstrap, Sass, JavaScript (ES6), jQuery, Ajax, React16, React-Router4, Redux,
+              yarn, webpack, Babel, ESLint, Git, NGINX, etc.
               </br/>
               <b>Github: </b>
               <a href="https://github.com/ywang04/youmall-admin-react">YouMall Admin System</a>
@@ -62,10 +63,10 @@
               <img src="images/yuora.jpg" alt="Yuora">
             </a>
             <p>
-              <b>Description: </b>A responsive website named Yuora, which is a social networking website where users can post
-              comments and connect with people who contribute unique insights and quality articles.
+              <b>Description: </b>A responsive website named Yuora, which is a social networking website where users can
+              post comments and connect with people who contribute unique insights and quality articles.
               <br />
-              <b>Tech: </b>HTML5, CSS3, JavaScript, jQuery, Ajax, Python Flask, MySQL, Git, NGINX, Digital Ocean etc.
+              <b>Tech: </b>HTML5, CSS3, JavaScript, jQuery, Ajax, MySQL, Git, NGINX, Digital Ocean etc.
               <br/>
               <b>Github: </b>
               <a href="https://github.com/ywang04/flask-blog">Yuora Website</a>
@@ -78,10 +79,10 @@
               <img src="images/RSVP.jpg" alt="RSVP">
             </a>
             <p>
-              <b>Description: </b>A responsive Meetup RSVP web application that helps users to keep track of who’s coming for
-              scheduled appointments.
+              <b>Description: </b>A responsive Meetup RSVP web application that helps users to keep track of who’s coming
+              for scheduled appointments.
               <br />
-              <b>Tech: </b>HTML5, CSS3, JavaScript (ES6), Local Storage, JSON and Git.
+              <b>Tech: </b>HTML5, CSS3, JavaScript (ES6), gulp, Local Storage, JSON and Git.
               </br/>
               <b>Github: </b>
               <a href="https://github.com/ywang04/RSVP">Meetup RSVP Website</a>
