--- a/project.html
+++ b/project.html
@@ -59,7 +59,7 @@
 
           <li>
             <h3>Project 2 - Yuora Website</h3>
-            <a href="http://yuora.tech">
+            <a href="http://yuora.online">
               <img src="images/yuora.jpg" alt="Yuora">
             </a>
             <p>
