--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
 
     <div class="card">
       <h2>Background</h2>
-      <p>I am an aspiring Front End Developer who is passionate about building amazing websites with various web technologies.
-        I love the combination of creative and logical problem-solving skills I get to use when writing codes.</p>
+      <p>I am an aspiring Front End Developer with great passion for building amazing responsive websites and strong hunger
+        for new technologies which can change the world. I love the combination of creative and logical problem-solving skills
+        I get to use when writing codes.
+      </p>
       <h3>Education</h3>
       <img src="images/treehouse.jpg" alt="Treehouse logo" class="treehouse-icon">
       <h4>Treehouse (2017-PRESENT)</h4>
@@ -56,8 +58,10 @@
         <li>CSS3</li>
         <li>Responsive Web Design</li>
         <li>JavaScript(ES6)</li>
+        <li>jQuery</li>
         <li>React.js</li>
         <li>Redux</li>
+        <li>Node.js</li>
         <li>Webpack</li>
       </ul>
 
