--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <li>React.js</li>
         <li>Redux</li>
         <li>Node.js</li>
-        <li>Webpack</li>
+        <li>webpack</li>
       </ul>
 
       <p>I'm looking for a company focused on quality and a position where I can explore new problems and come up with creative
