--- a/index.html
+++ b/index.html
@@ -50,21 +50,19 @@
     </div>
 
     <div class="card">
-      <h2>Goals</h2>
-      <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
-
+      <h2>Technical Skills</h2>
+      <p>I have extensive experience with front-end technologies including HTML5, CSS3, JavaScript (ES6), jQuery, React.js,
+        Redux, Ajax and JSON.</p>
       <ul class="skills">
         <li>HTML5</li>
         <li>CSS3</li>
-        <li>Responsive Web Design</li>
         <li>JavaScript(ES6)</li>
         <li>jQuery</li>
         <li>React.js</li>
         <li>Redux</li>
-        <li>Node.js</li>
-        <li>webpack</li>
+        <li>Ajax</li>
+        <li>JSON</li>
       </ul>
-
       <p>I'm looking for a company focused on quality and a position where I can explore new problems and come up with creative
         solutions.
       </p>
