--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
     <div class="card">
       <h2>Technical Skills</h2>
       <p>I have extensive experience with front-end technologies including HTML5, CSS3, JavaScript (ES6), jQuery, React.js,
-        Redux, Ajax and JSON.</p>
+        React Native, Redux, Ajax and JSON.</p>
       <ul class="skills">
         <li>HTML5</li>
         <li>CSS3</li>
         <li>JavaScript(ES6)</li>
         <li>jQuery</li>
         <li>React.js</li>
+        <li>React Native</li>
         <li>Redux</li>
         <li>Ajax</li>
         <li>JSON</li>
