--- a/project.html
+++ b/project.html
@@ -49,7 +49,7 @@
               <b>Description: </b>A robust, single page application for generic enterprise admin system that enables administers
               to manage their online business.
               <br />
-              <b>Tech: </b> HTML5, CSS3, Bootstrap, Sass, JavaScript (ES6), jQuery, Ajax, React16, React-Router4, Redux,
+              <b>Tech: </b> HTML5, CSS3, Bootstrap, Sass, JavaScript (ES6), jQuery, Ajax, JSON, React16, React-Router4, Redux,
               yarn, webpack, Babel, ESLint, Git, NGINX, etc.
               </br/>
               <b>Github: </b>
