--- a/project.html
+++ b/project.html
@@ -66,7 +66,7 @@
               <b>Description: </b>A responsive website named Yuora, which is a social networking website where users can
               post comments and connect with people who contribute unique insights and quality articles.
               <br />
-              <b>Tech: </b>HTML5, CSS3, JavaScript, jQuery, Ajax, MySQL, Git, NGINX, Digital Ocean etc.
+              <b>Tech: </b>HTML5, CSS3, JavaScript, jQuery, Python Flask, Ajax, MySQL, Git, NGINX, Digital Ocean etc.
               <br/>
               <b>Github: </b>
               <a href="https://github.com/ywang04/flask-blog">Yuora Website</a>
